--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 </head>
 
 <body>
-<img src="/statics/images/logo.png" >
+<img src="http://g.hiphotos.baidu.com/baike/s%3D220/sign=b412915879f40ad111e4c0e1672d1151/6159252dd42a28348af2906b59b5c9ea15cebf7e.jpg" >
 <br><br>
 
 <button id="btn">之后插入</button>
