--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 </head>
 
 <body>
-<img src="http://g.hiphotos.baidu.com/baike/s%3D220/sign=b412915879f40ad111e4c0e1672d1151/6159252dd42a28348af2906b59b5c9ea15cebf7e.jpg" >
+<img src="https://ss0.bdstatic.com/94oJfD_bAAcT8t7mm9GUKT-xh_/timg?image&quality=100&size=b4000_4000&sec=1496899265&di=78c83c97f813f4f9314a3928be46ad84&src=http://img3.91.com/uploads/allimg/160226/737-160226144041.jpg" >
 <br><br>
 
 <button id="btn">之后插入</button>
